# qt-starter

./: CMakeLists.txt  README.md
src/: HelloWorld.cpp  HelloWorld.h  Main.cpp
test/: CMakeLists.txt  test.cpp
